Adjust some color values to fix WCAG contrast issues

--- a/styles/components/settings.scss
+++ b/styles/components/settings.scss
@@ -103,7 +103,7 @@
   .form-radios {
     display: inline-flex;
     flex-wrap: wrap;
-    padding: .1875rem var(--gin-spacing-xs);
+    padding: 0 var(--gin-spacing-xxs);
     border: 1px solid var(--gin-border-color-form-element);
     border-radius: var(--gin-spacing-xl);
 
@@ -139,15 +139,15 @@
       margin: 0;
       border: 0;
 
+      &:active + .form-item__label,
       &:focus + .form-item__label {
         box-shadow: 0 0 0 1px var(--gin-color-focus-border),
                     0 0 0 4px var(--gin-color-focus);
       }
 
       &:checked + .form-item__label {
-        font-weight: var(--gin-font-weight-bold);
-        color: var(--gin-color-primary-active);
-        background: var(--gin-color-primary-light-active);
+        color: var(--gin-color-button-text);
+        background: var(--gin-color-primary);
       }
     }
   }
