--- a/styles/theme/accent.scss
+++ b/styles/theme/accent.scss
@@ -18,15 +18,15 @@
 // Light mode
 $ginColors: (
   blue: #0550e6,
-  light_blue: #3275e0,
+  light_blue: #2f6dd0,
   dark_purple: #4300bf,
   purple: #5b00ff,
   teal: #10857f,
   green: #00875f,
   red: #d8002f,
-  orange: #ef5c20,
-  yellow: #c58900,
-  pink: #e23177,
+  orange: #da6301,
+  yellow: #b37a00,
+  pink: #d12f70,
   neutral: #111111,
   custom: #111111,
 );
